<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="259dp"
        android:layout_height="23dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="monospace"
        android:text="@string/longitude_displays_here"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLongitudeLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitude" />

    <TextView
        android:id="@+id/tvAccuracy"
        android:layout_width="259dp"
        android:layout_height="23dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="monospace"
        android:text="@string/accuracy_displays_here"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAccuracyLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvLongitude" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="259dp"
        android:layout_height="23dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="monospace"
        android:text="@string/latitude_displays_here"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLatitudeLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAccuracyLabel"
        android:layout_width="100dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/Accuracy"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLongitudeLabel"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvLongitudeLabel"
        android:layout_width="100dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:fontFamily="monospace"
        android:text="@string/longitude"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitudeLabel"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvLatitudeLabel"
        android:layout_width="100dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="71dp"
        android:fontFamily="monospace"
        android:text="@string/latitude"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_getLocation"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:fontFamily="monospace"
        android:text="@string/get_location"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#434343"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccuracy"
        app:layout_constraintVertical_bias="0.957"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>